disables all hover effects on mobile devices, hot fix selectedBudget

--- a/frontend/src/app/access/signup/signup.component.scss
+++ b/frontend/src/app/access/signup/signup.component.scss
@@ -16,3 +16,9 @@
 .input-error-container {
     max-width: 250px;
 }
+
+@media (pointer: coarse) {
+    .link:hover {
+        filter: none !important;
+    }
+}
