--- a/frontend/src/app/main/content/settings/settings.component.scss
+++ b/frontend/src/app/main/content/settings/settings.component.scss
@@ -26,3 +26,9 @@
         cursor: pointer;
     }
 }
+
+@media (pointer: coarse) {
+    .edit:hover {
+        cursor: default !important;
+    }
+  }
