--- a/frontend/src/app/main/header/header.component.scss
+++ b/frontend/src/app/main/header/header.component.scss
@@ -51,3 +51,11 @@ header {
         }
     }
 }
+
+@media (pointer: coarse) {
+    header div.align-center img:hover,
+    header .help:hover {
+        filter: none !important;
+        cursor: default !important;
+    }
+  }
