--- a/frontend/src/app/main/nav/nav.component.scss
+++ b/frontend/src/app/main/nav/nav.component.scss
@@ -89,3 +89,15 @@ nav {
         }
     }
 }
+
+@media (pointer: coarse) {
+    nav .nav-row:hover {
+        background-color: inherit !important;
+        cursor: default !important;
+    }
+    
+    nav .legal-privacy-container div span:hover {
+        filter: none !important;
+        cursor: default !important;
+    }
+  }
